--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.12",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/three": "^0.172.0",
     "autoprefixer": "^10.4.20",
     "better-react-mathjax": "^2.0.4-beta1",
     "postcss": "^8.5.1",
