--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/three": "^0.172.0",
     "autoprefixer": "^10.4.20",
     "better-react-mathjax": "^2.0.4-beta1",
+    "lucide-react": "^0.474.0",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
